Fix card aligning and wrapping
Use nested flexboxes to match the design specifications

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,13 +1,7 @@
-* {
-  padding: 0px;
-  margin: 0px;
-}
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
-  /*Added*/
   display: flex;
   flex-direction: column;
 }
@@ -16,53 +10,38 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
-  /* Added */
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 0 16px;
-  font-family:'Courier New', Courier, monospace;
-  font-weight: 900;
-  font-size: 32px;
 }
-
-/*Added*/
-.content {
-  display: flex;
-  flex-grow: 1;
-}
-
-
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.sidebar {
-  min-width: 300px;
+.container {
+  display: flex;
+  flex-wrap: nowrap;
+  flex: 1;
+}
+
+.sidebar {  
+  width: 300px;
   background: royalblue;
   box-sizing: border-box;
-  display: flex;
-  padding: 0 16px;
-  font-size: 24px;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-li {
-  list-style-type: none;
+ 
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  height: 250px;
+  width: 250px;
+}
+
+.all-cards {
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+
 }
